@@ -1,109 +1,157 @@
+// package com.library.config;
+
+// import com.library.dtos.UserDto;
+// import com.library.model.User;
+// import io.jsonwebtoken.*;
+// import io.jsonwebtoken.security.Keys;
+// import jakarta.annotation.PostConstruct;
+// import lombok.RequiredArgsConstructor;
+// import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+// import org.springframework.security.core.Authentication;
+// import org.springframework.stereotype.Component;
+
+// import java.security.Key;
+// import java.util.Date;
+// import java.util.List;
+
+// @Component
+// @RequiredArgsConstructor
+// public class UserAuthProvider {
+
+//     private String secret = "verySecretKeyUsedForJWTGenerationMustBeLongEnough!";
+//     private Key secretKey;
+
+//     private final long validityInMilliseconds = 3600000; // 1h
+
+//     @PostConstruct
+//     protected void init() {
+//         this.secretKey = Keys.hmacShaKeyFor(secret.getBytes());
+//     }
+
+//     public String createToken(User user) {
+//         Claims claims = Jwts.claims().setSubject(user.getLogin());
+//         claims.put("id", user.getId());
+//         claims.put("firstName", user.getFirstName());
+//         claims.put("lastName", user.getLastName());
+
+//         Date now = new Date();
+//         Date validity = new Date(now.getTime() + validityInMilliseconds);
+
+//         return Jwts.builder()
+//                 .setClaims(claims)
+//                 .setIssuedAt(now)
+//                 .setExpiration(validity)
+//                 .signWith(secretKey)
+//                 .compact();
+//     }
+
+//     public Authentication validateToken(String token) {
+//         return new UsernamePasswordAuthenticationToken(
+//                 getUserDtoFromToken(token),
+//                 null,
+//                 List.of());
+//     }
+
+//     public Authentication validateTokenStrongly(String token) {
+//         return new UsernamePasswordAuthenticationToken(
+//                 getUserDtoFromToken(token),
+//                 null,
+//                 List.of());
+//     }
+
+//     private UserDto getUserDtoFromToken(String token) {
+//         Claims claims = Jwts.parserBuilder()
+//                 .setSigningKey(secretKey)
+//                 .build()
+//                 .parseClaimsJws(token)
+//                 .getBody();
+
+//         return new UserDto(
+//                 claims.get("id", Integer.class).longValue(), // sau Long.class, după caz
+//                 claims.get("firstName", String.class),
+//                 claims.get("lastName", String.class),
+//                 claims.getSubject(), // login
+//                 token);
+//     }
+// }
+
 package com.library.config;
 
-import com.auth0.jwt.JWT;
-import com.auth0.jwt.JWTVerifier;
-import com.auth0.jwt.algorithms.Algorithm;
-import com.auth0.jwt.interfaces.DecodedJWT;
 import com.library.dtos.UserDto;
-import com.library.exceptions.AppException;
-import com.library.mappers.UserMapper;
 import com.library.model.User;
-import com.library.repository.UserRepository;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.security.Keys;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.security.core.Authentication;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Component;
-import java.lang.String;
 
-
+import javax.crypto.SecretKey;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 
-
-@RequiredArgsConstructor
 @Component
+@RequiredArgsConstructor
 public class UserAuthProvider {
 
-    private final UserRepository userRepository;
-    private final UserMapper userMapper;
-    @Value("${security.jwt.token. secret-key: secret-key}")
-    private String secretKey;
+    @Value("${security.jwt.token.secret-key}")
+    private String secretKeyString;
+
+    private SecretKey secretKey;
+
+    private final long validityInMilliseconds = 3600000; // 1h
 
     @PostConstruct
     protected void init() {
-        secretKey = Base64.getEncoder().encodeToString(secretKey.getBytes());
-        //this is to avoid having the row secret key available in the JWM
-        //only the backend can encode and decode the JWT
-        //=> the need of the secret key
+        byte[] decodedKey = Base64.getDecoder().decode(secretKeyString);
+        this.secretKey = Keys.hmacShaKeyFor(decodedKey);
     }
-    //I need 2 methods, one to generate the token, and one to validate this
-    public String createToken(UserDto dto){
-        Date now = new Date();
-        Date validity = new Date(now.getTime() + 3_600_000);
-        //this means that we will wait 1h until the authentication finishes
-        return JWT.create()
-                .withIssuer(dto.getLogin())
-                .withIssuedAt(now)
-                .withExpiresAt(validity)
-                .withClaim("firstName",dto.getFirstName())
-                .withClaim("lastName", dto.getLastName())
-                .sign(Algorithm.HMAC256(secretKey));
 
+    public String createToken(User user) {
+        Claims claims = Jwts.claims().setSubject(user.getLogin());
+        claims.put("id", user.getId());
+        claims.put("firstName", user.getFirstName());
+        claims.put("lastName", user.getLastName());
+
+        return Jwts.builder()
+                .setClaims(claims)
+                .setIssuedAt(new Date())
+                .setExpiration(new Date(System.currentTimeMillis() + validityInMilliseconds))
+                .signWith(secretKey, SignatureAlgorithm.HS384)
+                .compact();
     }
-    public Authentication validateToken(String token){
-        Algorithm algorithm = Algorithm.HMAC256(secretKey);
 
-        JWTVerifier verifier = JWT.require(algorithm).build();
-
-        DecodedJWT decoded = verifier.verify(token);
-
-        UserDto user;
-        user = UserDto.builder()
-                .login(decoded.getIssuer())
-                .firstName(decoded.getClaim("firstName").asString())
-                .lastName(decoded.getClaim("lastName").toString())
-                .build();
-
-        //i use the information in the JWT to create a user DTO
-        //with the login, the first name and the last name
-        return new UsernamePasswordAuthenticationToken(user,null, Collections.emptyList());
-        //let's use the first method in the controller to return the new token
-        // we are moving in the AuthController class
+    public Authentication validateToken(String token) {
+        return new UsernamePasswordAuthenticationToken(
+                getUserDtoFromToken(token),
+                null,
+                List.of());
     }
 
     public Authentication validateTokenStrongly(String token) {
-        Algorithm algorithm = Algorithm.HMAC256(secretKey);
-
-        JWTVerifier verifier = JWT.require(algorithm).build();
-
-        DecodedJWT decoded = verifier.verify(token);
-
-        //the stronger validation starts as before, but i will
-        //also check in the repository the existance of the user
-
-//        User user = userRepository.findByLogin(decoded.getIssuer())
-//                .orElseThrow(() -> new AppException("Unknown user", HttpStatus.NOT_FOUND));
-//
-//        //but i will also check in the repo the existance of the user
-//        return new UsernamePasswordAuthenticationToken(userMapper.toUserDto(user),null, Collections.emptyList());
-        //as before, return an authentification Bean
-
-        // NEW:
-        User user = userRepository.findByLogin(decoded.getIssuer())
-                .orElseThrow(() -> new AppException("Unknown user", HttpStatus.NOT_FOUND));
-
-        // map it into your DTO (now id/login/etc. are set):
-        UserDto dto = userMapper.toUserDto(user);
-
         return new UsernamePasswordAuthenticationToken(
-                dto,
+                getUserDtoFromToken(token),
                 null,
-                Collections.emptyList()
-        );
+                List.of());
+    }
 
+    private UserDto getUserDtoFromToken(String token) {
+        Claims claims = Jwts.parserBuilder()
+                .setSigningKey(secretKey)
+                .build()
+                .parseClaimsJws(token)
+                .getBody();
+
+        return new UserDto(
+                claims.get("id", Integer.class).longValue(),
+                claims.get("firstName", String.class),
+                claims.get("lastName", String.class),
+                claims.getSubject(), // login
+                token);
     }
 }
